--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/@arham/safe-area.git"
+    "url": "git+https://github.com/aakashvora/safe-area.git"
   },
   "bugs": {
-    "url": "https://github.com/@arham/safe-area/issues"
+    "url": "https://github.com/aakashvora/safe-area/issues"
   },
   "keywords": [
     "capacitor",
@@ -79,5 +79,3 @@
     }
   }
 }
-
-
