--- a/package.json
+++ b/package.json
@@ -1,81 +1,81 @@
 {
-  "name": "@arham/safe-area",
-  "version": "7.0.0-alpha.1",
-  "description": "Capacitor Plugin that exposes the safe area insets from the native iOS/Android device to your web project.",
-  "main": "dist/plugin.cjs.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
-  "unpkg": "dist/plugin.js",
-  "files": [
-    "android/src/main/",
-    "android/build.gradle",
-    "dist/",
-    "ios/Sources",
-    "ios/Tests",
-    "Package.swift",
-    "CapacitorCommunitySafeArea.podspec"
-  ],
-  "author": "",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aakashvora/safe-area.git"
-  },
-  "bugs": {
-    "url": "https://github.com/aakashvora/safe-area/issues"
-  },
-  "keywords": [
-    "capacitor",
-    "plugin",
-    "native"
-  ],
-  "scripts": {
-    "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
-    "verify:ios": "xcodebuild -scheme CapacitorCommunitySafeArea -destination generic/platform=iOS",
-    "verify:android": "cd android && ./gradlew clean build test && cd ..",
-    "verify:web": "npm run build",
-    "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
-    "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
-    "eslint": "eslint . --ext ts",
-    "prettier": "prettier \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
-    "swiftlint": "node-swiftlint",
-    "docgen": "docgen --api SafeAreaPlugin --output-readme README.md --output-json dist/docs.json",
-    "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.mjs",
-    "clean": "rimraf ./dist",
-    "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
-  },
-  "devDependencies": {
-    "@capacitor/android": "^7.0.0",
-    "@capacitor/cli": "^7.0.0",
-    "@capacitor/core": "^7.0.0",
-    "@capacitor/docgen": "^0.3.0",
-    "@capacitor/ios": "^7.0.0",
-    "@ionic/eslint-config": "^0.4.0",
-    "@ionic/prettier-config": "^4.0.0",
-    "@ionic/swiftlint-config": "^2.0.0",
-    "eslint": "^8.57.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-java": "^2.6.6",
-    "rimraf": "^6.0.1",
-    "rollup": "^4.30.1",
-    "swiftlint": "^2.0.0",
-    "typescript": "~4.1.5"
-  },
-  "peerDependencies": {
-    "@capacitor/core": ">=7.0.0"
-  },
-  "prettier": "@ionic/prettier-config",
-  "swiftlint": "@ionic/swiftlint-config",
-  "eslintConfig": {
-    "extends": "@ionic/eslint-config/recommended"
-  },
-  "capacitor": {
-    "ios": {
-      "src": "ios"
-    },
-    "android": {
-      "src": "android"
-    }
-  }
+    "name":  "@arham/safe-area",
+    "version":  "7.0.0-alpha.1",
+    "description":  "Capacitor Plugin that exposes the safe area insets from the native iOS/Android device to your web project.",
+    "main":  "dist/plugin.cjs.js",
+    "module":  "dist/plugin.js",
+    "types":  "dist/definitions.d.ts",
+    "unpkg":  "dist/plugin.js",
+    "files":  [
+                  "android/src/main/",
+                  "android/build.gradle",
+                  "dist/",
+                  "ios/Sources",
+                  "ios/Tests",
+                  "Package.swift",
+                  "CapacitorCommunitySafeArea.podspec"
+              ],
+    "author":  "",
+    "license":  "MIT",
+    "repository":  {
+                       "type":  "git",
+                       "url":  "git+https://github.com/aakashvora/safe-area.git"
+                   },
+    "bugs":  {
+                 "url":  "https://github.com/aakashvora/safe-area/issues"
+             },
+    "keywords":  [
+                     "capacitor",
+                     "plugin",
+                     "native"
+                 ],
+    "scripts":  {
+                    "verify":  "npm run verify:ios \u0026\u0026 npm run verify:android \u0026\u0026 npm run verify:web",
+                    "verify:ios":  "xcodebuild -scheme CapacitorCommunitySafeArea -destination generic/platform=iOS",
+                    "verify:android":  "cd android \u0026\u0026 ./gradlew clean build test \u0026\u0026 cd ..",
+                    "verify:web":  "npm run build",
+                    "lint":  "npm run eslint \u0026\u0026 npm run prettier -- --check \u0026\u0026 npm run swiftlint -- lint",
+                    "fmt":  "npm run eslint -- --fix \u0026\u0026 npm run prettier -- --write \u0026\u0026 npm run swiftlint -- --fix --format",
+                    "eslint":  "eslint . --ext ts",
+                    "prettier":  "prettier \"**/*.{css,html,ts,js,java}\" --plugin=prettier-plugin-java",
+                    "swiftlint":  "node-swiftlint",
+                    "docgen":  "docgen --api SafeAreaPlugin --output-readme README.md --output-json dist/docs.json",
+                    "build":  "npm run clean \u0026\u0026 npm run docgen \u0026\u0026 tsc \u0026\u0026 rollup -c rollup.config.mjs",
+                    "clean":  "rimraf ./dist",
+                    "watch":  "tsc --watch",
+                    "prepublishOnly":  "npm run build"
+                },
+    "devDependencies":  {
+                            "@capacitor/android":  "^7.0.0",
+                            "@capacitor/cli":  "^7.0.0",
+                            "@capacitor/core":  "^7.0.0",
+                            "@capacitor/docgen":  "^0.3.0",
+                            "@capacitor/ios":  "^7.0.0",
+                            "@ionic/eslint-config":  "^0.4.0",
+                            "@ionic/prettier-config":  "^4.0.0",
+                            "@ionic/swiftlint-config":  "^2.0.0",
+                            "eslint":  "^8.57.0",
+                            "prettier":  "^3.4.2",
+                            "prettier-plugin-java":  "^2.6.6",
+                            "rimraf":  "^6.0.1",
+                            "rollup":  "^4.30.1",
+                            "swiftlint":  "^2.0.0",
+                            "typescript":  "~4.1.5"
+                        },
+    "peerDependencies":  {
+                             "@capacitor/core":  "\u003e=7.0.0"
+                         },
+    "prettier":  "@ionic/prettier-config",
+    "swiftlint":  "@ionic/swiftlint-config",
+    "eslintConfig":  {
+                         "extends":  "@ionic/eslint-config/recommended"
+                     },
+    "capacitor":  {
+                      "ios":  {
+                                  "src":  "ios"
+                              },
+                      "android":  {
+                                      "src":  "android"
+                                  }
+                  }
 }
