Fix podspec filename in package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ios/Sources",
     "ios/Tests",
     "Package.swift",
-    "ArhamScopeSafeArea.podspec"
+    "ArhamSafeArea.podspec"
   ],
   "author": "",
   "license": "MIT",
